// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Usuario {
  id            Int      @id @default(autoincrement())
  email         String   @unique
  password_hash String
  rol           String   // Ej: "Gerente", "Almacen", etc.
  nombre        String
  movimientos   MovimientoInventario[]
  solicitudes   SolicitudInsumo[]
  consumos_registrados Consumo[] @relation("ConsumoRegistradoPor")
  consumos_autorizados Consumo[] @relation("ConsumoAutorizadoPor")
  reportes_validados   ReporteValidacion[] @relation("ReporteValidadoPor")
}

model Proveedor {
  id                    Int      @id @default(autoincrement())
  nit_rut               String   @unique
  razon_social          String   @unique
  telefono              String?
  responsable_nombre    String   @default("")
  responsable_cargo     String   @default("")
  responsable_telefono  String   @default("")
  responsable_email     String   @default("")
  estado                String   @default("Activo") // "Activo" o "Inactivo" para borrado lógico
  compras               Compra[]
  insumos               ProveedorInsumo[]
}

model Insumo {
  id             Int      @id @default(autoincrement())
  nombre         String
  marca          String   @default("Genérica")
  unidad_medida  String
  categoria      String
  stock_minimo   Float    @default(0)
  precio_unitario Float    @default(0)
  estado         String   @default("Activo") // Activo o Inactivo
  compras_det    CompraDetalle[]
  inventarios    Inventario[]
  movimientos    MovimientoInventario[]
  solicitudes     SolicitudInsumo[]
  recetas         PlatoInsumo[]
  proveedores     ProveedorInsumo[]

  @@unique([nombre, marca])
}

model ProveedorInsumo {
  id              Int       @id @default(autoincrement())
  proveedor_id    Int
  proveedor       Proveedor @relation(fields: [proveedor_id], references: [id])
  insumo_id       Int
  insumo          Insumo    @relation(fields: [insumo_id], references: [id])
  precio_unitario Float
  es_preferido    Boolean   @default(false)
  estado          String    @default("Activo")

  @@unique([proveedor_id, insumo_id])
}

model Compra {
  id           Int      @id @default(autoincrement())
  proveedor_id Int
  proveedor    Proveedor @relation(fields: [proveedor_id], references: [id])
  fecha        DateTime @default(now())
  total        Float
  estado       String   @default("PENDIENTE_INGRESO") // PENDIENTE_INGRESO, INGRESADA
  detalles     CompraDetalle[]
}

model CompraDetalle {
  id              Int      @id @default(autoincrement())
  compra_id       Int
  compra          Compra   @relation(fields: [compra_id], references: [id])
  insumo_id       Int
  insumo          Insumo   @relation(fields: [insumo_id], references: [id])
  cantidad        Float
  precio_unitario Float
}

model Inventario {
  id               Int      @id @default(autoincrement())
  insumo_id        Int
  insumo           Insumo   @relation(fields: [insumo_id], references: [id])
  lote             String?
  fecha_vencimiento DateTime?
  cantidad_actual  Float
  estado           String   @default("Disponible") // Disponible, Vencido, Dañado
  movimientos      MovimientoInventario[]
}

model MovimientoInventario {
  id               Int      @id @default(autoincrement())
  insumo_id        Int
  insumo           Insumo   @relation(fields: [insumo_id], references: [id])
  inventario_id    Int?
  inventario       Inventario? @relation(fields: [inventario_id], references: [id])
  tipo_movimiento  String   // Ingreso, Salida, Merma
  cantidad         Float
  fecha            DateTime @default(now())
  motivo           String?  // Compra, Ajuste, Vencimiento, Daño, etc.
  usuario_id       Int
  usuario          Usuario  @relation(fields: [usuario_id], references: [id])
}

model SolicitudInsumo {
  id              Int      @id @default(autoincrement())
  insumo_id       Int
  insumo          Insumo   @relation(fields: [insumo_id], references: [id])
  usuario_id      Int
  usuario         Usuario  @relation(fields: [usuario_id], references: [id])
  cantidad        Float
  estado          String   @default("PENDIENTE") // PENDIENTE, ATENDIDA, CANCELADA
  fecha_solicitud DateTime @default(now())
  observacion     String?
}

model Plato {
  id          Int      @id @default(autoincrement())
  nombre      String   @unique
  descripcion String?
  estado      String   @default("Activo")
  receta      PlatoInsumo[]
  receta_pasos PlatoRecetaPasos?
  menu_items  MenuItem[]
}

model PlatoRecetaPasos {
  id          Int      @id @default(autoincrement())
  plato_id    Int      @unique
  plato       Plato    @relation(fields: [plato_id], references: [id])
  pasos_json  String
  foto_url    String?
  fuente      String   @default("gemini")
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
}

model PlatoInsumo {
  id                    Int    @id @default(autoincrement())
  plato_id              Int
  plato                 Plato  @relation(fields: [plato_id], references: [id])
  insumo_id             Int
  insumo                Insumo @relation(fields: [insumo_id], references: [id])
  cantidad_por_porcion  Float
  unidad_medida         String

  @@unique([plato_id, insumo_id])
}

model MenuMes {
  id        Int        @id @default(autoincrement())
  anio      Int
  mes       Int
  estado    String     @default("BORRADOR")
  items     MenuItem[]

  @@unique([anio, mes])
}

model MenuItem {
  id                   Int      @id @default(autoincrement())
  menu_mes_id          Int
  menu_mes             MenuMes  @relation(fields: [menu_mes_id], references: [id])
  plato_id             Int
  plato                Plato    @relation(fields: [plato_id], references: [id])
  semana               Int
  dia                  String
  turno                String   @default("Almuerzo")
  porciones_estimadas  Int

  @@unique([menu_mes_id, semana, dia, turno])
}

model VidaUtilIaCache {
  id                        Int      @id @default(autoincrement())
  insumo_id                 Int
  ambiente                  String
  variante                  Int
  vida_util_sugerida_dias   Int
  razon_corta               String
  explicacion               String
  accion_sugerida           String
  usos                      Int      @default(0)
  created_at                DateTime @default(now())
  updated_at                DateTime @updatedAt

  @@unique([insumo_id, ambiente, variante])
  @@index([insumo_id, ambiente])
}

model Cliente {
  id           Int      @id @default(autoincrement())
  razon_social String   @unique
  estado       String   @default("Activo")
  trabajadores Trabajador[]
  validaciones ReporteValidacion[]
}

model Trabajador {
  id         Int      @id @default(autoincrement())
  cliente_id Int
  cliente    Cliente @relation(fields: [cliente_id], references: [id])
  ci          String  @unique
  codigo_qr  String? @unique
  nombres    String
  apellidos  String
  estado     String  @default("Activo")
  consumos   Consumo[]
}

model Consumo {
  id                     Int       @id @default(autoincrement())
  trabajador_id          Int
  trabajador             Trabajador @relation(fields: [trabajador_id], references: [id])
  fecha                  DateTime
  turno                  String
  metodo_identificacion  String
  registrado_por_id      Int
  registrado_por         Usuario   @relation("ConsumoRegistradoPor", fields: [registrado_por_id], references: [id])
  registrado_en          DateTime  @default(now())
  doble_racion           Boolean   @default(false)
  autorizado_por_id      Int?
  autorizado_por         Usuario?  @relation("ConsumoAutorizadoPor", fields: [autorizado_por_id], references: [id])
  firma                  ConsumoFirma?
  feedback               Feedback?

  @@unique([trabajador_id, fecha, turno])
  @@index([fecha, turno])
}

model ConsumoFirma {
  id           Int      @id @default(autoincrement())
  consumo_id   Int      @unique
  consumo      Consumo  @relation(fields: [consumo_id], references: [id])
  firma_base64 String
  firmado_en   DateTime @default(now())
}

model ReporteValidacion {
  id           Int      @id @default(autoincrement())
  fecha        DateTime
  turno        String
  cliente_id   Int
  cliente      Cliente  @relation(fields: [cliente_id], references: [id])
  validado_por_id Int
  validado_por Usuario  @relation("ReporteValidadoPor", fields: [validado_por_id], references: [id])
  validado_en  DateTime @default(now())
  firma_base64 String
  estado       String   @default("Validado")

  @@unique([cliente_id, fecha, turno])
  @@index([fecha, turno])
}

model Feedback {
  id         Int     @id @default(autoincrement())
  consumo_id Int    @unique
  consumo    Consumo @relation(fields: [consumo_id], references: [id])
  puntuacion Int
  comentario String?
}
