```mermaid
erDiagram
    %% Módulo Proveedores y Compras
    Proveedores {
        int id PK
        string nit_rut "Único"
        string razon_social
        string telefono
        string responsable_nombre
        string responsable_cargo
        string responsable_telefono
        string responsable_email
        string estado "Activo/Inactivo"
    }

    Compras {
        int id PK
        int proveedor_id FK
        datetime fecha
        decimal total
        string estado
    }

    ComprasDetalle {
        int id PK
        int compra_id FK
        int insumo_id FK
        decimal cantidad
        decimal precio_unitario
    }

    %% Módulo Inventario
    Insumos {
        int id PK
        string nombre
        string unidad_medida
        string categoria "Frutas, Carnes, Abarrotes, etc."
        decimal stock_minimo
        string estado "Activo, Inactivo"
    }

    Inventario {
        int id PK
        int insumo_id FK
        decimal cantidad_actual
        date fecha_vencimiento
        string lote "Código de lote opcional"
        string estado "Interno: Disponible/Inactivo técnico"
    }

    MovimientosInventario {
        int id PK
        int insumo_id FK
        int inventario_id FK "Relaciona al lote específico"
        string tipo_movimiento "Ingreso, Salida, Ajuste"
        decimal cantidad
        datetime fecha
        string motivo "Compra, Cocina, Vencido, Dañado, Sobrante"
        int usuario_id FK
    }

    SolicitudesInsumo {
        int id PK
        int insumo_id FK
        int usuario_id FK "Chef/Cocina solicitante"
        decimal cantidad
        string estado "PENDIENTE, ATENDIDA, CANCELADA"
        datetime fecha_solicitud
        string observacion
    }

    %% Módulo Menú y Cocina
    MenuMes {
        int id PK
        int anio
        int mes
        string estado "BORRADOR, PUBLICADO, CERRADO"
    }

    MenuItem {
        int id PK
        int menu_mes_id FK
        int plato_id FK
        int semana "1, 2, 3, 4"
        string dia "Lunes a Domingo"
        string turno "Desayuno, Almuerzo, Cena"
        int porciones_estimadas
    }

    Platos {
        int id PK
        string nombre
        string descripcion
        string estado "Activo, Inactivo"
    }

    PlatoInsumo {
        int id PK
        int plato_id FK
        int insumo_id FK
        decimal cantidad_por_porcion
        string unidad_medida
    }

    AjustesReceta {
        int id PK
        int plato_id FK
        string motivo_cambio
        datetime creado_en
    }

    %% Módulo Consumo y Validación (Cliente final) - Sprint 3.1
    EmpresaCliente {
        int id PK
        string razon_social
    }

    Trabajador {
        int id PK
        int cliente_id FK
        string ci "Único"
        string nombres
        string apellidos
        string codigo_qr "Único opcional"
        string estado "Activo/Inactivo"
    }

    Consumo {
        int id PK
        int trabajador_id FK
        date fecha
        string turno "Desayuno/Almuerzo/Cena"
        string metodo_identificacion "CI/QR"
        int registrado_por FK
        datetime registrado_en
        boolean doble_racion
        int autorizado_por FK "Gerente opcional"
    }

    ConsumoFirma {
        int id PK
        int consumo_id FK
        string firma_base64
        datetime firmado_en
    }

    ReporteValidacion {
        int id PK
        date fecha
        string turno "Desayuno/Almuerzo/Cena"
        int cliente_id FK
        int validado_por FK
        datetime validado_en
        string firma_base64
        string estado "Validado"
    }

    Feedback {
        int id PK
        int consumo_id FK
        int puntuacion
        string comentario
    }

    %% Módulo Facturación
    Facturas {
        int id PK
        int cliente_id FK
        date fecha_emision
        decimal monto_total
        string url_pdf
        string estado "Emitida, Pagada"
    }

    %% Usuarios Internos (Catering)
    Usuarios {
        int id PK
        string nombre
        string email
        string password_hash
        string rol "Gerente, Cocinero, Almacen, Cliente"
    }

    AsistenciasStaff {
        int id PK
        int usuario_id FK
        datetime marcacion_entrada
        datetime marcacion_salida
    }

    %% Relaciones
    Proveedores ||--o{ Compras : "recibe"
    Compras ||--|{ ComprasDetalle : "contiene"
    Insumos ||--o{ ComprasDetalle : "comprado en"

    Insumos ||--o{ Inventario : "almacenado"
    Insumos ||--o{ MovimientosInventario : "tiene"
    Insumos ||--o{ SolicitudesInsumo : "solicitado por cocina"
    Usuarios ||--o{ MovimientosInventario : "registra"
    Usuarios ||--o{ SolicitudesInsumo : "solicita"

    MenuMes ||--|{ MenuItem : "planifica"
    Platos ||--o{ MenuItem : "se programa en"
    Platos ||--|{ PlatoInsumo : "usa"
    Insumos ||--o{ PlatoInsumo : "compone receta"
    Platos ||--o{ AjustesReceta : "sufre modificaciones"

    Trabajador ||--o{ Consumo : "realiza"
    Consumo ||--o| ConsumoFirma : "tiene firma"
    Consumo ||--o| Feedback : "genera"
    EmpresaCliente ||--|{ Trabajador : "emplea"
    EmpresaCliente ||--o{ ReporteValidacion : "valida reportes"
    Usuarios ||--o{ Consumo : "registra"
    Usuarios ||--o{ ReporteValidacion : "firma como cliente"
    EmpresaCliente ||--o{ Facturas : "paga"

    Usuarios ||--o{ AsistenciasStaff : "registra jornada"

```
